force-app/main/default/objects/Block__c/fields/Agreement_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Agreement_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocks (Agreement CRM Executive)</relationshipLabel>
    <relationshipName>Agreement_CRM_Executive_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>