force-app/main/default/objects/Block__c/fields/Customer_Service_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocks (Customer Service CRM Executive)</relationshipLabel>
    <relationshipName>Customer_Service_CRM_Executive_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>