force-app/main/default/objects/Block__c/fields/Demands_Collections_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Demands_Collections_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demands &amp; Collections CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocks (Demands &amp; Collections CRM Executive)</relationshipLabel>
    <relationshipName>Demands_Collections_CRM_Executive_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>