force-app/main/default/objects/Block__c/fields/Possession_Handover_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Possession_Handover_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possession / Handover CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocks (Possession / Handover CRM Executive)</relationshipLabel>
    <relationshipName>Possession_Handover_CRM_Executive_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>