force-app/main/default/objects/Block__c/fields/Registration_CRM_Executive__c.field-meta.xml
<CustomField>
    <fullName>Registration_CRM_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration CRM Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Blocks (Registration CRM Executive)</relationshipLabel>
    <relationshipName>Registration_CRM_Executive_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>